--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-relay": "^1.6.2",
     "react_ujs": "^2.4.4"
   },
   "devDependencies": {
+    "babel-plugin-relay": "^1.6.2",
+    "relay-compiler": "^1.6.2",
     "webpack-dev-server": "2.11.2"
   }
 }
