⚡️ improvement: use GraphQL::RakeTask to export IDL schema

--- a/.babelrc
+++ b/.babelrc
@@ -17,7 +17,7 @@
     [
       "relay",
       {
-        "schema": "app/javascript/packs/schema.json",
+        "schema": "app/javascript/packs/schema.grapqhl",
         "debug": true
       }
     ],
