--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "psyche",
   "private": true,
   "scripts": {
-    "relay": "relay-compiler --src ./app/javascript --schema ./app/javascript/packs/schema.json"
+    "relay": "relay-compiler --src ./app/javascript --schema ./app/javascript/packs/schema.graphql"
   },
   "dependencies": {
     "@rails/webpacker": "3.5",
