--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "babel-plugin-relay": "^1.6.2",
+    "graphql": "^14.0.0",
     "relay-compiler": "^1.6.2",
     "webpack-dev-server": "2.11.2"
   }
