--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react_ujs": "^2.4.4"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-plugin-relay": "^1.6.2",
+    "babel-preset-flow": "^6.23.0",
     "eslint": "^5.5.0",
     "eslint-plugin-react": "^7.11.1",
+    "flow-bin": "^0.80.0",
     "graphql": "^14.0.0",
     "relay-compiler": "^1.6.2",
     "webpack-dev-server": "2.11.2"
