--- a/.babelrc
+++ b/.babelrc
@@ -24,6 +24,7 @@
     ],
     "syntax-dynamic-import",
     "transform-object-rest-spread",
+    "transform-runtime",
     [
       "transform-class-properties",
       {
