--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^3.0.2",
     "@material-ui/icons": "^3.0.1",
     "@rails/webpacker": "3.5",
+    "axios": "^0.18.0",
     "babel-preset-react": "^6.24.1",
     "chalk": "^2.4.1",
     "dotenv": "^6.0.0",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-relay": "^1.6.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-flow": "^6.23.0",
     "chai": "^4.1.2",
     "chromedriver": "^2.41.0",
