--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "psyche",
   "private": true,
   "scripts": {
+    "build": "babel ./app/javascript/src/ -d ./app/javascript/lib/",
     "relay": "relay-compiler --src ./app/javascript --schema ./app/javascript/src/schema.graphql",
     "test": "node ./spec/runner.js ./spec/wdio.conf.js",
     "test-debug": "DEBUG=1 npm run test",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^9.0.0",
     "babel-plugin-relay": "^1.6.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-flow": "^6.23.0",
@@ -35,6 +37,7 @@
     "get-port": "^4.0.0",
     "graphql": "^14.0.0",
     "mocha": "^5.2.0",
+    "prettier-eslint": "^8.8.2",
     "relay-compiler": "^1.6.2",
     "selenium-server": "^3.14.0",
     "sinon": "^6.2.0",
