--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -2,8 +2,8 @@
 
 default: &default
   source_path: app/javascript
-  source_entry_path: packs
-  public_output_path: packs
+  source_entry_path: src
+  public_output_path: dist
   cache_path: tmp/cache/webpacker
 
   # Additional paths webpack should lookup modules
@@ -57,7 +57,7 @@ test:
   compile: true
 
   # Compile test packs to a separate directory
-  public_output_path: packs-test
+  public_output_path: dist/test
 
 production:
   <<: *default
