--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@
 /yarn-error.log
 
 .byebug_history
-/public/packs
-/public/packs-test
+/public/dist
+/public/dist-test
 /node_modules
 yarn-debug.log*
 .yarn-integrity
@@ -31,3 +31,4 @@ TODO.md
 .ruby-version
 psyche.code-workspace
 package-lock.json
+cypress/examples
