🔧 config: disable table Hash align linter

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -96,7 +96,7 @@ Layout/EmptyLinesAroundModuleBody:
 
 Layout/AlignHash:
   EnforcedHashRocketStyle: key
-  EnforcedColonStyle: table
+  EnforcedColonStyle: key
   Exclude:
     - 'locales/**/*'
 
