➕ add: use found relay router

--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "babel-preset-react": "^6.24.1",
     "chalk": "^2.4.1",
     "dotenv": "^6.0.0",
+    "farce": "^0.2.6",
+    "found": "^0.3.14",
+    "found-relay": "^0.3.1",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-relay": "^1.6.2",
-    "react-router-dom": "^4.3.1",
     "react_ujs": "^2.4.4",
     "typeface-roboto": "^0.0.54"
   },
