--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mocha": "^5.2.0",
     "prettier-eslint": "^8.8.2",
     "relay-compiler": "^1.6.2",
+    "relay-devtools": "^1.4.0",
     "selenium-server": "^3.14.0",
     "sinon": "^6.2.0",
     "sinon-chai": "^3.2.0",
